assignment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-k8s-svc
spec:
  selector:
    app: spring-boot-k8s
  ports:
    - protocol: "TCP"
      port: 8081      # Update to match the Spring Boot app port
      targetPort: 8081  # Update to match the Spring Boot app po  # Optional: Define a static nodePort
  type: NodePort
